# logos-waku-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_libwaku.sh  flake.nix  metadata.json  module.yaml  waku_module_interface.h  waku_module_plugin.cpp  waku_module_plugin.h
lib/: README.md
nix/: default.nix  include.nix  lib.nix  package.nix
scripts/: compile.sh
src/: waku_module_interface.h  waku_module_plugin.cpp
